--- a/dataset/pandas part2.ipynb
+++ b/dataset/pandas part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "289ac3b2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1a2a189a",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 32561 entries, 0 to 32560\n",
-      "Data columns (total 15 columns):\n",
+      "Data columns (total 16 columns):\n",
       " #   Column          Non-Null Count  Dtype \n",
       "---  ------          --------------  ----- \n",
-      " 0   age             32561 non-null  int64 \n",
+      " 0   ages            32561 non-null  int64 \n",
       " 1   workclass       32561 non-null  object\n",
       " 2   fnlwgt          32561 non-null  int64 \n",
       " 3   education       32561 non-null  object\n",
@@ -41,17 +41,18 @@
       " 12  hours.per.week  32561 non-null  int64 \n",
       " 13  native.country  32561 non-null  object\n",
       " 14  income          32561 non-null  object\n",
-      "dtypes: int64(6), object(9)\n",
-      "memory usage: 3.7+ MB\n"
+      " 15  country         32561 non-null  object\n",
+      "dtypes: int64(6), object(10)\n",
+      "memory usage: 4.0+ MB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "RangeIndex(start=0, stop=32561, step=1)"
+       "False"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,25 +64,39 @@
     "datas.tail()\n",
     "datas.shape\n",
     "datas.index\n",
-    "#"
+    "datas.empty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2dcb17e8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'datas' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdatas\u001b[49m.columns\n\u001b[32m      2\u001b[39m datas.size\n\u001b[32m      3\u001b[39m datas.dtypes\n",
-      "\u001b[31mNameError\u001b[39m: name 'datas' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "age                int64\n",
+       "workclass         object\n",
+       "fnlwgt             int64\n",
+       "education         object\n",
+       "education.num      int64\n",
+       "marital.status    object\n",
+       "occupation        object\n",
+       "relationship      object\n",
+       "race              object\n",
+       "sex               object\n",
+       "capital.gain       int64\n",
+       "capital.loss       int64\n",
+       "hours.per.week     int64\n",
+       "native.country    object\n",
+       "income            object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -92,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "457ab9a6",
    "metadata": {},
    "outputs": [
@@ -136,228 +151,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>90</td>\n",
-       "      <td>?</td>\n",
-       "      <td>77053</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Widowed</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4356</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>82</td>\n",
+       "      <th>20</th>\n",
+       "      <td>37</td>\n",
        "      <td>Private</td>\n",
-       "      <td>132870</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Widowed</td>\n",
+       "      <td>188774</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Never-married</td>\n",
        "      <td>Exec-managerial</td>\n",
        "      <td>Not-in-family</td>\n",
        "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4356</td>\n",
-       "      <td>18</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>66</td>\n",
-       "      <td>?</td>\n",
-       "      <td>186061</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Widowed</td>\n",
-       "      <td>?</td>\n",
-       "      <td>Unmarried</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4356</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>54</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>140359</td>\n",
-       "      <td>7th-8th</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Machine-op-inspct</td>\n",
-       "      <td>Unmarried</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3900</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>41</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>264663</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Separated</td>\n",
-       "      <td>Prof-specialty</td>\n",
-       "      <td>Own-child</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3900</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>34</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>216864</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Other-service</td>\n",
-       "      <td>Unmarried</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3770</td>\n",
-       "      <td>45</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>38</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>150601</td>\n",
-       "      <td>10th</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Separated</td>\n",
-       "      <td>Adm-clerical</td>\n",
-       "      <td>Unmarried</td>\n",
-       "      <td>White</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
-       "      <td>3770</td>\n",
+       "      <td>2824</td>\n",
        "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>74</td>\n",
-       "      <td>State-gov</td>\n",
-       "      <td>88638</td>\n",
-       "      <td>Doctorate</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Prof-specialty</td>\n",
-       "      <td>Other-relative</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3683</td>\n",
-       "      <td>20</td>\n",
        "      <td>United-States</td>\n",
        "      <td>&gt;50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>68</td>\n",
-       "      <td>Federal-gov</td>\n",
-       "      <td>422013</td>\n",
-       "      <td>HS-grad</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Prof-specialty</td>\n",
+       "      <th>21</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>77009</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Separated</td>\n",
+       "      <td>Sales</td>\n",
        "      <td>Not-in-family</td>\n",
        "      <td>White</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
-       "      <td>3683</td>\n",
-       "      <td>40</td>\n",
+       "      <td>2754</td>\n",
+       "      <td>42</td>\n",
        "      <td>United-States</td>\n",
        "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>41</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>70037</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Craft-repair</td>\n",
-       "      <td>Unmarried</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3004</td>\n",
-       "      <td>60</td>\n",
-       "      <td>?</td>\n",
-       "      <td>&gt;50K</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   age    workclass  fnlwgt     education  education.num marital.status  \\\n",
-       "0   90            ?   77053       HS-grad              9        Widowed   \n",
-       "1   82      Private  132870       HS-grad              9        Widowed   \n",
-       "2   66            ?  186061  Some-college             10        Widowed   \n",
-       "3   54      Private  140359       7th-8th              4       Divorced   \n",
-       "4   41      Private  264663  Some-college             10      Separated   \n",
-       "5   34      Private  216864       HS-grad              9       Divorced   \n",
-       "6   38      Private  150601          10th              6      Separated   \n",
-       "7   74    State-gov   88638     Doctorate             16  Never-married   \n",
-       "8   68  Federal-gov  422013       HS-grad              9       Divorced   \n",
-       "9   41      Private   70037  Some-college             10  Never-married   \n",
+       "    age workclass  fnlwgt  education  education.num marital.status  \\\n",
+       "20   37   Private  188774  Bachelors             13  Never-married   \n",
+       "21   29   Private   77009       11th              7      Separated   \n",
        "\n",
-       "          occupation    relationship   race     sex  capital.gain  \\\n",
-       "0                  ?   Not-in-family  White  Female             0   \n",
-       "1    Exec-managerial   Not-in-family  White  Female             0   \n",
-       "2                  ?       Unmarried  Black  Female             0   \n",
-       "3  Machine-op-inspct       Unmarried  White  Female             0   \n",
-       "4     Prof-specialty       Own-child  White  Female             0   \n",
-       "5      Other-service       Unmarried  White  Female             0   \n",
-       "6       Adm-clerical       Unmarried  White    Male             0   \n",
-       "7     Prof-specialty  Other-relative  White  Female             0   \n",
-       "8     Prof-specialty   Not-in-family  White  Female             0   \n",
-       "9       Craft-repair       Unmarried  White    Male             0   \n",
+       "         occupation   relationship   race     sex  capital.gain  capital.loss  \\\n",
+       "20  Exec-managerial  Not-in-family  White    Male             0          2824   \n",
+       "21            Sales  Not-in-family  White  Female             0          2754   \n",
        "\n",
-       "   capital.loss  hours.per.week native.country income  \n",
-       "0          4356              40  United-States  <=50K  \n",
-       "1          4356              18  United-States  <=50K  \n",
-       "2          4356              40  United-States  <=50K  \n",
-       "3          3900              40  United-States  <=50K  \n",
-       "4          3900              40  United-States  <=50K  \n",
-       "5          3770              45  United-States  <=50K  \n",
-       "6          3770              40  United-States  <=50K  \n",
-       "7          3683              20  United-States   >50K  \n",
-       "8          3683              40  United-States  <=50K  \n",
-       "9          3004              60              ?   >50K  "
+       "    hours.per.week native.country income  \n",
+       "20              40  United-States   >50K  \n",
+       "21              42  United-States  <=50K  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +214,10 @@
     "datas.loc[[10,40]]\n",
     "datas.dtypes\n",
     "# DataFrame.to_numpy() \n",
-    "datas[0:10]\n",
+    "datas[0:2]\n",
+    "datas[['age','workclass']]\n",
+    "datas[0:2][['age','workclass']]\n",
+    "datas[20:22]\n",
     "#See more in Selection by Label using DataFrame.loc() or DataFrame.at()."
    ]
   },
@@ -1093,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "33fda187",
    "metadata": {},
    "outputs": [],
@@ -1125,13 +975,12 @@
    ],
    "source": [
     "datas.columns\n",
-    "datas[\"new_age\"]=datas[\"age\"]+5  #creating new column\n",
-    "datas.columns"
+    "datas[\"new_age\"]=datas[\"age\"]+5  #creating new column\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4cfc81c3",
    "metadata": {},
    "outputs": [
@@ -1141,11 +990,11 @@
        "Index(['ages', 'workclass', 'fnlwgt', 'education', 'education.num',\n",
        "       'marital.status', 'occupation', 'relationship', 'race', 'sex',\n",
        "       'capital.gain', 'capital.loss', 'hours.per.week', 'native.country',\n",
-       "       'income', 'country', 'new_age'],\n",
+       "       'income', 'country'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "178fd15a",
    "metadata": {},
    "outputs": [
@@ -1165,36 +1014,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              min  max       mean  count\n",
-      "education                               \n",
-      "10th           17   90  37.429796    933\n",
-      "11th           17   90  32.355745   1175\n",
-      "12th           17   79  32.000000    433\n",
-      "1st-4th        19   90  46.142857    168\n",
-      "5th-6th        17   84  42.885886    333\n",
-      "7th-8th        17   90  48.445820    646\n",
-      "9th            17   90  41.060311    514\n",
-      "Assoc-acdm     19   90  37.381443   1067\n",
-      "Assoc-voc      19   84  38.553546   1382\n",
-      "Bachelors      19   90  38.904949   5355\n",
-      "Doctorate      24   80  47.702179    413\n",
-      "HS-grad        17   90  38.974479  10501\n",
-      "Masters        18   90  44.049913   1723\n",
-      "Preschool      19   75  42.764706     51\n",
-      "Prof-school    25   90  44.746528    576\n",
-      "Some-college   17   90  35.756275   7291\n"
+      "              min  max       mean  count     sum\n",
+      "education                                       \n",
+      "10th           17   90  37.429796    933   34922\n",
+      "11th           17   90  32.355745   1175   38018\n",
+      "12th           17   79  32.000000    433   13856\n",
+      "1st-4th        19   90  46.142857    168    7752\n",
+      "5th-6th        17   84  42.885886    333   14281\n",
+      "7th-8th        17   90  48.445820    646   31296\n",
+      "9th            17   90  41.060311    514   21105\n",
+      "Assoc-acdm     19   90  37.381443   1067   39886\n",
+      "Assoc-voc      19   84  38.553546   1382   53281\n",
+      "Bachelors      19   90  38.904949   5355  208336\n",
+      "Doctorate      24   80  47.702179    413   19701\n",
+      "HS-grad        17   90  38.974479  10501  409271\n",
+      "Masters        18   90  44.049913   1723   75898\n",
+      "Preschool      19   75  42.764706     51    2181\n",
+      "Prof-school    25   90  44.746528    576   25774\n",
+      "Some-college   17   90  35.756275   7291  260699\n"
      ]
     }
    ],
    "source": [
     "#grouping\n",
-    "temp=datas.groupby(\"education\")[\"ages\"].agg([\"min\",\"max\",\"mean\",\"count\"])\n",
+    "temp=datas.groupby(\"education\")[\"ages\"].agg([\"min\",\"max\",\"mean\",\"count\",\"sum\"])\n",
     "print(temp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7470360d",
    "metadata": {},
    "outputs": [
@@ -1217,19 +1066,27 @@
        "native.country    0\n",
        "income            0\n",
        "country           0\n",
-       "new_age           0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "datas.isna().sum()\n",
-    "datas.rename"
+    "datas.rename\n",
+    "datas.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9489a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
