--- a/dataset/pandas.ipynb
+++ b/dataset/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f55424f2",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "5c0543c2",
    "metadata": {},
    "outputs": [
@@ -182,33 +182,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>SUR</td>\n",
-       "      <td>Suriname</td>\n",
+       "      <th>59</th>\n",
+       "      <td>ECU</td>\n",
+       "      <td>Ecuador</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>KOR</td>\n",
-       "      <td>South Korea</td>\n",
+       "      <th>185</th>\n",
+       "      <td>SRB</td>\n",
+       "      <td>Serbia</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>IRQ</td>\n",
-       "      <td>Iraq</td>\n",
+       "      <th>207</th>\n",
+       "      <td>TUR</td>\n",
+       "      <td>Turkey</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>OMA</td>\n",
-       "      <td>Oman</td>\n",
+       "      <th>84</th>\n",
+       "      <td>GUI</td>\n",
+       "      <td>Guinea</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>Afghanistan</td>\n",
+       "      <th>65</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>Ethiopia</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -216,15 +216,15 @@
        "</div>"
       ],
       "text/plain": [
-       "     NOC       region notes\n",
-       "191  SUR     Suriname   NaN\n",
-       "109  KOR  South Korea   NaN\n",
-       "96   IRQ         Iraq   NaN\n",
-       "153  OMA         Oman   NaN\n",
-       "0    AFG  Afghanistan   NaN"
+       "     NOC    region notes\n",
+       "59   ECU   Ecuador   NaN\n",
+       "185  SRB    Serbia   NaN\n",
+       "207  TUR    Turkey   NaN\n",
+       "84   GUI    Guinea   NaN\n",
+       "65   ETH  Ethiopia   NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,14 +578,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f6ad81d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['NOC', 'region', 'notes'], dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# addding and removing rows and columns\n",
     "# merge and concatenate\n",
-    "# aggregation and grouping\n"
+    "# aggregation and grouping\n",
+    "datas.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a41298e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NOC</th>\n",
+       "      <th>region</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   NOC       region notes\n",
+       "0  AFG  Afghanistan   NaN"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datas[\"NOC\"]   #datas[\"NOC\"] → gets the column\n",
+    "datas[datas[\"NOC\"] == \"AFG\"]  #NOC is column name and AFG is value in that column"
    ]
   }
  ],
