--- a/dataset/pandas.ipynb
+++ b/dataset/pandas.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f6ad81d0",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
    "source": [
     "# addding and removing rows and columns\n",
     "# merge and concatenate\n",
-    "# aggregation and grouping\n",
+    "# aggregation and grouping ...\n",
     "datas.columns"
    ]
   },
