--- a/dataset/pandas.ipynb
+++ b/dataset/pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "022b060f",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5d0426c4",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "2  75  85  96"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5c0543c2",
    "metadata": {},
    "outputs": [
@@ -182,9 +182,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>ECU</td>\n",
-       "      <td>Ecuador</td>\n",
+       "      <th>57</th>\n",
+       "      <td>DMA</td>\n",
+       "      <td>Dominica</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>TOG</td>\n",
+       "      <td>Togo</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -194,37 +200,31 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>TUR</td>\n",
-       "      <td>Turkey</td>\n",
+       "      <th>187</th>\n",
+       "      <td>SSD</td>\n",
+       "      <td>South Sudan</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>GUI</td>\n",
-       "      <td>Guinea</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>ETH</td>\n",
-       "      <td>Ethiopia</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>88</th>\n",
+       "      <td>HKG</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Hong Kong</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     NOC    region notes\n",
-       "59   ECU   Ecuador   NaN\n",
-       "185  SRB    Serbia   NaN\n",
-       "207  TUR    Turkey   NaN\n",
-       "84   GUI    Guinea   NaN\n",
-       "65   ETH  Ethiopia   NaN"
+       "     NOC       region      notes\n",
+       "57   DMA     Dominica        NaN\n",
+       "203  TOG         Togo        NaN\n",
+       "185  SRB       Serbia        NaN\n",
+       "187  SSD  South Sudan        NaN\n",
+       "88   HKG        China  Hong Kong"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "f92fb918",
    "metadata": {},
    "outputs": [
@@ -346,13 +346,13 @@
        "Name: NOC, Length: 230, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datas.iloc[1,2]\n",
+    "\n",
     "datas[\"NOC\"]"
    ]
   },
