--- a/dataset/pandas.ipynb
+++ b/dataset/pandas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "94a43fc7",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "['A', 'B', 'C', 'd']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,46 +182,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>DMA</td>\n",
-       "      <td>Dominica</td>\n",
+       "      <th>190</th>\n",
+       "      <td>SUI</td>\n",
+       "      <td>Switzerland</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>TOG</td>\n",
-       "      <td>Togo</td>\n",
+       "      <th>193</th>\n",
+       "      <td>SWE</td>\n",
+       "      <td>Sweden</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>SRB</td>\n",
-       "      <td>Serbia</td>\n",
+       "      <th>132</th>\n",
+       "      <td>MHL</td>\n",
+       "      <td>Marshall Islands</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>SSD</td>\n",
-       "      <td>South Sudan</td>\n",
+       "      <th>18</th>\n",
+       "      <td>BDI</td>\n",
+       "      <td>Burundi</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>HKG</td>\n",
-       "      <td>China</td>\n",
-       "      <td>Hong Kong</td>\n",
+       "      <th>134</th>\n",
+       "      <td>MLI</td>\n",
+       "      <td>Mali</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     NOC       region      notes\n",
-       "57   DMA     Dominica        NaN\n",
-       "203  TOG         Togo        NaN\n",
-       "185  SRB       Serbia        NaN\n",
-       "187  SSD  South Sudan        NaN\n",
-       "88   HKG        China  Hong Kong"
+       "     NOC            region notes\n",
+       "190  SUI       Switzerland   NaN\n",
+       "193  SWE            Sweden   NaN\n",
+       "132  MHL  Marshall Islands   NaN\n",
+       "18   BDI           Burundi   NaN\n",
+       "134  MLI              Mali   NaN"
       ]
      },
      "execution_count": 5,
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "026daee1",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "4  AND      Andorra                   NaN"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f6ad81d0",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
    "source": [
     "# addding and removing rows and columns\n",
     "# merge and concatenate\n",
-    "# aggregation and grouping\n",
+    "# aggregation and grouping-----\n",
     "datas.columns"
    ]
   },
