--- a/python learn -P/hacker rank pratice .ipynb
+++ b/python learn -P/hacker rank pratice .ipynb
@@ -57,6 +57,17 @@
     "print(k)\n",
     "#news\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0434543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.hackerrank.com/challenges/python-lists/problem?isFullScreen=true\n",
+    "n=int(input())\n"
+   ]
   }
  ],
  "metadata": {
